{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 694,
  "lineage": "4909d270-f7c5-05e9-32a4-0714fdbb0c34",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default-route-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0bf1b3c87d14a51a5",
            "id": "rtb-0bf1b3c87d14a51a5",
            "owner_id": "314559611088",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-06af485b71d051b0f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-route-private"
            },
            "vpc_id": "vpc-0af770e799eeae284"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.Pub-sn2ELK_MGT_NAT-Agile",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c52392d750a1e97c",
            "public_dns": "ec2-13-235-118-148.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.118.148",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Agile-NAT-SSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:314559611088:instance/i-0f1e0a199069bd0d7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1e0a199069bd0d7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai-south",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d6cd5ff804e1c8e9",
            "private_dns": "ip-10-0-2-23.ap-south-1.compute.internal",
            "private_ip": "10.0.2.23",
            "public_dns": "ec2-52-66-246-230.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.246.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-075f629f6e262cbc1",
                "volume_size": 20,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-00df26b9ba19fd296",
            "tags": {
              "Name": "Agile-NAT-SSH"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02a68cc13b9f00bf3"
            ]
          },
          "dependencies": [
            "aws_security_group.natsg",
            "aws_subnet.Pub-sn2ELK_MGT_NAT-Agile",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "agile_APP_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:314559611088:instance/i-0d5661009a86d24a4",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5661009a86d24a4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai-south",
            "monitoring": false,
            "primary_network_interface_id": "eni-08ef07b2465154e6a",
            "private_dns": "ip-10-0-0-48.ap-south-1.compute.internal",
            "private_ip": "10.0.0.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-02eac15cbec602d04",
                "volume_size": 20,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06ad1d5e188b9e361",
            "tags": {
              "Name": "Agile-Ubuntu-APP"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d1d236f7d4252a8c"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-agile-APP-server",
            "aws_subnet.Pri-sn1APP_WEB-Agile",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "agile_ubuntu_web1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:314559611088:instance/i-05bd5acecaaf5eed2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05bd5acecaaf5eed2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai-south",
            "monitoring": false,
            "primary_network_interface_id": "eni-0136598d6fa760c7f",
            "private_dns": "ip-10-0-0-164.ap-south-1.compute.internal",
            "private_ip": "10.0.0.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0c312322de9e0cb99",
                "volume_size": 20,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06ad1d5e188b9e361",
            "tags": {
              "Name": "Agile_ubuntu_Web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f4b926f629d2f7d7"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-agile-web-server",
            "aws_subnet.Pri-sn1APP_WEB-Agile",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09097b7f546c253c4",
            "owner_id": "314559611088",
            "tags": {
              "Name": "agile-igw"
            },
            "vpc_id": "vpc-0af770e799eeae284"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c52392d750a1e97c",
            "id": "nat-06af485b71d051b0f",
            "network_interface_id": "eni-0089145554e2f05fa",
            "private_ip": "10.0.2.172",
            "public_ip": "13.235.118.148",
            "subnet_id": "subnet-00df26b9ba19fd296",
            "tags": {
              "Name": "Nat Gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.Pub-sn2ELK_MGT_NAT-Agile",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06a1a523066288a61",
            "owner_id": "314559611088",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09097b7f546c253c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "vpc_id": "vpc-0af770e799eeae284"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arts-p-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07070406b541cf643",
            "route_table_id": "rtb-0bf1b3c87d14a51a5",
            "subnet_id": "subnet-06ad1d5e188b9e361"
          },
          "dependencies": [
            "aws_subnet.Pri-sn1APP_WEB-Agile",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arts1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0181c0626fcbe0f38",
            "route_table_id": "rtb-06a1a523066288a61",
            "subnet_id": "subnet-0e0d596da04138c33"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route",
            "aws_subnet.Pub-sn1ALB-Agile",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arts1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099d074d765e1f68e",
            "route_table_id": "rtb-06a1a523066288a61",
            "subnet_id": "subnet-00df26b9ba19fd296"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route",
            "aws_subnet.Pub-sn2ELK_MGT_NAT-Agile",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "natsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:314559611088:security-group/sg-02a68cc13b9f00bf3",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-02a68cc13b9f00bf3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "natsg",
            "name_prefix": null,
            "owner_id": "314559611088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-Agile-ssh-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af770e799eeae284"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-agile-APP-server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:314559611088:security-group/sg-0d1d236f7d4252a8c",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0d1d236f7d4252a8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_APP",
            "name_prefix": null,
            "owner_id": "314559611088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-agile-APP-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af770e799eeae284"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-agile-web-server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:314559611088:security-group/sg-0f4b926f629d2f7d7",
            "description": "Allow traffic to pass from the public subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0f4b926f629d2f7d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_WEB",
            "name_prefix": null,
            "owner_id": "314559611088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-Agile-WEB-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af770e799eeae284"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pri-sn1APP_WEB-Agile",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:314559611088:subnet/subnet-06ad1d5e188b9e361",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-06ad1d5e188b9e361",
            "map_public_ip_on_launch": false,
            "owner_id": "314559611088",
            "tags": {
              "Name": "Pri-sn1APP_WEB-Agile-10.0.0.0/24-us-east-2a"
            },
            "vpc_id": "vpc-0af770e799eeae284"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pub-sn1ALB-Agile",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:314559611088:subnet/subnet-0e0d596da04138c33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e0d596da04138c33",
            "map_public_ip_on_launch": true,
            "owner_id": "314559611088",
            "tags": {
              "Name": "Pub-sn1ALB-Agile-10.0.1.0/24-us-east-2a"
            },
            "vpc_id": "vpc-0af770e799eeae284"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pub-sn2ELK_MGT_NAT-Agile",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:314559611088:subnet/subnet-00df26b9ba19fd296",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00df26b9ba19fd296",
            "map_public_ip_on_launch": true,
            "owner_id": "314559611088",
            "tags": {
              "Name": "Pub-sn2ELK_MGT_NAT-Agile-10.0.2.0/24-us-east-2a"
            },
            "vpc_id": "vpc-0af770e799eeae284"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:314559611088:vpc/vpc-0af770e799eeae284",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05dc319db3ec9a1f8",
            "default_route_table_id": "rtb-0bf1b3c87d14a51a5",
            "default_security_group_id": "sg-011703f22bb8a185a",
            "dhcp_options_id": "dopt-59e90032",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0af770e799eeae284",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bf1b3c87d14a51a5",
            "owner_id": "314559611088",
            "tags": {
              "Name": "vpc_agile"
            }
          }
        }
      ]
    }
  ]
}